2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 56355 – GtkLabel - Not all changes propagate correctly

	* gtk/gtklabel.c: (gtk_label_recalculate), (gtk_label_set_label),
	(gtk_label_set_markup_with_mnemonic), (gtk_label_parse_uline),
	(gtk_label_set_text_with_mnemonic), (gtk_label_set_use_underline):
	Call gtk_label_setup_mnemonic from gtk_label_recalculate. Add
	notifications of mnemonic-keyval changes.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 511217 - potential memory corruption after refreshing a tree_view

	* gtk/gtktreeview.c (cancel_arrow_animation): Reset
	expanded_collapsed_node when canceling the animation.
	Patch by Nicholas Setton.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 106574 - Inconsistent increment behavior for gtkspinbutton

	* gtk/gtkspinbutton.c (gtk_spin_button_real_value_change):
	Commit the entry text before doing an increment. Patch by
	Björn Lindqvist.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 531008 – Crash in gtkprintunixdialog.c

	* gtk/gtkprintunixdialog.c: Disconnect signal handlers when
	the dialog closes. Patch by Yevgen Muntyan.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 523562 - gtk-update-icon-cache core dumps when run concurrently and
	when options are missing

	* gtk/updateiconcache.c: Open the cache file (O_CREAT | O_EXCL) so
	that other processes that try to open it will fail gracefully.  Also
	fix a crasher caused by lack of a NULL check.  Report and patch
	by Erwann Chenede.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 526635 - _gdk_window_get_toplevel handles FOREIGN windows

	* gdk/x11/gdkwindow-x11.c (_gdk_window_get_toplevel): Check
	!WINDOW_IS_TOPLEVEL instead of checking for GDK_WINDOW_CHILD,
	so that we also take into account for foreign windows.
	Report and patch by Nathaniel Smith.
