@@ -2,6 +2,17 @@
 
 	Merge from trunk:
 
+	Bug 530146 - Setting non-string tooltip with
+	gtk_tree_view_set_tooltip_column() segfaults
+
+	* gtk/gtktreeview.c (gtk_tree_view_set_tooltip_query_cb): use
+	gtk_tree_model_get_value() and explicitly transform the value to a
+	string before setting it as tooltip.
+
+2008-06-02  Matthias Clasen <mclasen@redhat.com> 
+
+	Merge from trunk:
+
 	Bug 56355 – GtkLabel - Not all changes propagate correctly
 
 	* gtk/gtklabel.c: (gtk_label_recalculate), (gtk_label_set_label),
